feat: update service, mapper, repository, and aspect layers